finalized version of the bp

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -18,9 +18,10 @@
         <a href="{% url 'images:list' %}">Images</a>
       </li>
 
-      <li {% if section == 'people' %}class="selected"{% endif %}>
-        <a href="#">People</a>
+      <li {% if section == "people" %}class="selected"{% endif %}>
+        <a href="{% url 'user_list' %}">People</a>
       </li>
+
     </ul>
   {% endif %}
   <span class="user">
