--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -2,11 +2,12 @@
 {% block title %}{{ image.title }}{% endblock %}
 {% block content %}
   <h1>{{ image.title }}</h1>
+  {% if image.image %}
   {% load thumbnail %}
   <a href="{{ image.image.url }}">
     <img src="{% thumbnail image.image 300x0 %}" class="image-detail">
   </a>
-
+  {% endif %}
   {% with total_likes=image.users_like.count users_like=image.users_like.all %}
 
     <div class="image-info">
@@ -14,6 +15,9 @@
         <span class="count">
           <span class="total">{{ total_likes }}</span>
           like{{ total_likes|pluralize }}
+        </span>
+        <span class="count">
+          {{ total_views }} view{{ total_views|pluralize }}
         </span>
         <a href="#" data-id="{{ image.id }}" data-action="{% if request.user in users_like %}un{% endif %}like" class="like button">
         {% if request.user not in users_like %}
