--- a/images/templates/images/image/list_ajax.html
+++ b/images/templates/images/image/list_ajax.html
@@ -2,7 +2,9 @@
 {% for image in images %}
   <div class="image">
     <a href="{{ image.get_absolute_url }}">
+      {% if image.image %}
       {% thumbnail image.image 300x300 crop="smart" as im %}
+      {% endif %}
       <a href="{{ image.get_absolute_url }}">
         <img src="{{ im.url }}">
       </a>
